--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body class="text-center" style="background-color:white;">
     <video id="bgVideo" preload="true" autoplay loop muted> <!-- controls -->
-        <source src="/media/Coronavirus - 34824.mp4" type="video/mp4" >
+        <source src="media/Coronavirus - 34824.mp4" type="video/mp4" >
     </video>   
     <nav class="navbar navbar-dark bg-dark">
         <!-- Navbar content -->
