--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         <h1 class="banner p-2" >Lets Play!</h1>
         <div class="row" style="padding-left: 30%;padding-right: 30%;">
             <div class="col" style="padding-bottom: 50px;width: 10%;position: relative;padding-right: 25%;z-index: 2;">
-                <img id="corona"src="/media/coronavirus.png" width="100" height="100">
+                <img id="corona"src="media/coronavirus.png" width="100" height="100">
             </div>
             <div class="col" style="padding-bottom: 50px;width: 10%;position: relative;padding-left: 25%;z-index: 1;">
-                <img id="scared"src="/media/feelings.png" width="90" height="90">
+                <img id="scared"src="media/feelings.png" width="90" height="90">
             </div>
         </div>
         <div class="form-group">
